# mediabus-fdk-aac

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  cabal.project  default.nix  flake.nix  mediabus-fdk-aac.cabal  mk-demo.sh  run-benchmarks-prof.sh  run-benchmarks.sh  run-examples-prof.sh  run-examples.sh  run-tests.sh  shell.nix  stack.yaml  stack.yaml.outoftheway
bench/: Encoder.hs  Main.hs
examples/: Main.hs
src/Data/MediaBus/: FdkAac.hs
src/Data/MediaBus/Audio/FdkAac/: Encoder.hs  EncoderFdkWrapper.hs
src/Data/MediaBus/FdkAac/: Encoder.hs  EncoderFdkWrapper.hs  InternalLogging.hs
src/Data/MediaBus/FdkAac/Conduit/: Encoder.hs
tests/Data/MediaBus/FdkAac/Conduit/: EncoderSpec.hs
