name:                mediabus-fdk-aac
version:             0.4.0.0
synopsis:            Mediabus plugin for the Frauenhofer ISO-14496-3 AAC FDK
description:         Please see README.md
homepage:            https://github.com/lindenbaum/mediabus-fdk-aac
license:             BSD3
license-file:        LICENSE
author:              Sven Heyll
maintainer:          sven.heyll@lindenbaum.eu
copyright:           2016, 2017 Sven Heyll, Lindenbaum GmbH
category:            Sound
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.MediaBus.FdkAac.Encoder
                     , Data.MediaBus.FdkAac.Conduit.Encoder
                     , Data.MediaBus.FdkAac
  other-modules:       Data.MediaBus.FdkAac.EncoderFdkWrapper
  ghc-options:       -O2 -Wall -funbox-strict-fields -fno-warn-unused-do-bind
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                     , ConstraintKinds
                     , CPP
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DuplicateRecordFields
                     , FlexibleInstances
                     , FlexibleContexts
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , KindSignatures
                     , MultiParamTypeClasses
                     , NamedFieldPuns
                     , OverloadedStrings
                     , QuasiQuotes
                     , RecordWildCards
                     , RankNTypes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TemplateHaskell
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeInType
                     , TypeOperators
                     , TypeSynonymInstances
                     , UnicodeSyntax
  build-depends:       base >= 4.9 && < 5
                     , bytestring
                     , conduit
                     , conduit-combinators
                     , containers
                     , deepseq
                     , inline-c
                     , lens
                     , mediabus
                     , monad-logger
                     , random
                     , resourcet
                     , spool
                     , tagged
                     , text
                     , time
                     , transformers
                     , vector <13
  c-sources:         src/Data/MediaBus/FdkAac/EncoderFdkWrapper.c
  -- These flags will be passed to the C compiler
  cc-options:          -std=c99 -Wall -O2
  -- Libraries to link the code with.
  extra-libraries:     m
  PkgConfig-Depends:   fdk-aac >= 0.1.4

benchmark encoder-benchmark
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  main-is:          Encoder.hs
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                     , ConstraintKinds
                     , CPP
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DuplicateRecordFields
                     , FlexibleInstances
                     , FlexibleContexts
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , KindSignatures
                     , MultiParamTypeClasses
                     , NamedFieldPuns
                     , OverloadedStrings
                     , QuasiQuotes
                     , RecordWildCards
                     , RankNTypes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TemplateHaskell
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeInType
                     , TypeOperators
                     , TypeSynonymInstances
                     , UnicodeSyntax
  build-depends:    base, deepseq, ghc-prim, lens, monad-logger, time,
                    criterion, mediabus-fdk-aac, mediabus, conduit, vector <13
  ghc-options:      -O2 -Wall -funbox-strict-fields -fno-warn-unused-do-bind


test-suite examples
  type:                exitcode-stdio-1.0
  hs-source-dirs:      examples
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                     , ConstraintKinds
                     , CPP
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DuplicateRecordFields
                     , FlexibleInstances
                     , FlexibleContexts
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , KindSignatures
                     , MultiParamTypeClasses
                     , NamedFieldPuns
                     , OverloadedStrings
                     , QuasiQuotes
                     , RecordWildCards
                     , RankNTypes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TemplateHaskell
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeInType
                     , TypeOperators
                     , TypeSynonymInstances
                     , UnicodeSyntax
  build-depends:    base, deepseq, ghc-prim, lens, monad-logger,
                    mediabus-fdk-aac, mediabus, conduit, vector <13
  ghc-options:      -O2 -Wall -funbox-strict-fields -fno-warn-unused-do-bind
