cabal-version:       2.4
name:                mediabus-fdk-aac
version:             0.5.1
synopsis:            Mediabus plugin for the Frauenhofer ISO-14496-3 AAC FDK
description:         Please see README.md
homepage:            https://github.com/sheyll/mediabus-fdk-aac
license:             BSD-3-Clause
license-file:        LICENSE
author:              Sven Heyll
maintainer:          svh@posteo.de
copyright:           2016-2021 Sven Heyll, Lindenbaum GmbH
category:            Sound
build-type:          Simple

library
  hs-source-dirs:      src
  exposed-modules:     Data.MediaBus.FdkAac.Encoder
                     , Data.MediaBus.FdkAac.Conduit.Encoder
                     , Data.MediaBus.FdkAac
  other-modules:       Data.MediaBus.FdkAac.EncoderFdkWrapper
  ghc-options:       -Wall -funbox-strict-fields -fno-warn-unused-do-bind
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                     , ConstraintKinds
                     , CPP
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DuplicateRecordFields
                     , FlexibleInstances
                     , FlexibleContexts
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , KindSignatures
                     , MultiParamTypeClasses
                     , NamedFieldPuns
                     , OverloadedStrings
                     , QuasiQuotes
                     , RecordWildCards
                     , RankNTypes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TemplateHaskell
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeInType
                     , TypeOperators
                     , TypeSynonymInstances
                     , UnicodeSyntax
  build-depends:       base >= 4.12 && < 5
                     , bytestring
                     , conduit
                     , conduit-combinators
                     , containers
                     , deepseq
                     , inline-c
                     , lens
                     , mediabus >= 0.5
                     , monad-logger
                     , mtl
                     , random
                     , resourcet
                     , spool
                     , tagged
                     , text
                     , time
                     , transformers
                     , vector <13
  -- c-sources:         src/Data/MediaBus/FdkAac/EncoderFdkWrapper.c
  -- These flags will be passed to the C compiler
  cc-options:          -std=c99 -Wall -O2
  -- Libraries to link the code with.
  -- extra-libraries:     m
  PkgConfig-Depends:   fdk-aac >= 0.1.4

benchmark encoder-benchmark
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  main-is:          Main.hs
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                     , ConstraintKinds
                     , CPP
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DuplicateRecordFields
                     , FlexibleInstances
                     , FlexibleContexts
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , KindSignatures
                     , MultiParamTypeClasses
                     , NamedFieldPuns
                     , OverloadedStrings
                     , QuasiQuotes
                     , RecordWildCards
                     , RankNTypes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TemplateHaskell
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeInType
                     , TypeOperators
                     , TypeSynonymInstances
                     , UnicodeSyntax
  build-depends:      base ^>= 4.14
                    , deepseq
                    , ghc-prim
                    , lens
                    , monad-logger
                    , time
                    , criterion
                    , mediabus-fdk-aac
                    , mediabus ^>= 0.5.0.1
                    , conduit
                    , vector <13
  ghc-options:      -threaded -Wall -funbox-strict-fields -fno-warn-unused-do-bind


test-suite examples
  type:                exitcode-stdio-1.0
  hs-source-dirs:      examples
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                     , ConstraintKinds
                     , CPP
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DuplicateRecordFields
                     , FlexibleInstances
                     , FlexibleContexts
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , KindSignatures
                     , MultiParamTypeClasses
                     , NamedFieldPuns
                     , OverloadedStrings
                     , QuasiQuotes
                     , RecordWildCards
                     , RankNTypes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TemplateHaskell
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeInType
                     , TypeOperators
                     , TypeSynonymInstances
                     , UnicodeSyntax
  build-depends:      base ^>= 4.14
                    , deepseq
                    , ghc-prim
                    , lens
                    , monad-logger
                    , time
                    , criterion
                    , mediabus-fdk-aac
                    , mediabus ^>= 0.5.0.1
                    , conduit
                    , vector <13
  ghc-options:      -threaded -Wall -funbox-strict-fields -fno-warn-unused-do-bind -rtsopts
