cabal-version:       2.4
name:                mediabus-fdk-aac
version:             2.0.0
synopsis:            Mediabus plugin for the Frauenhofer ISO-14496-3 AAC FDK
description:         Please see README.md
homepage:            https://github.com/sheyll/mediabus-fdk-aac
license:             BSD-3-Clause
license-file:        LICENSE
author:              Sven Heyll
maintainer:          svh@posteo.de
copyright:           2016-2023 Sven Heyll, Lindenbaum GmbH
category:            Sound
build-type:          Simple

library
  hs-source-dirs:      src
  exposed-modules:     Data.MediaBus.FdkAac.Encoder
                     , Data.MediaBus.FdkAac.Conduit.Encoder
                     , Data.MediaBus.FdkAac
  other-modules:       Data.MediaBus.FdkAac.EncoderFdkWrapper
                     , Data.MediaBus.FdkAac.InternalLogging
  ghc-options:       -Wall -funbox-strict-fields -fno-warn-unused-do-bind -fno-full-laziness
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                     , ConstraintKinds
                     , CPP
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DuplicateRecordFields
                     , FlexibleInstances
                     , FlexibleContexts
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , KindSignatures
                     , LambdaCase
                     , MultiParamTypeClasses
                     , NamedFieldPuns
                     , OverloadedStrings
                     , QuasiQuotes
                     , RecordWildCards
                     , RankNTypes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , StrictData
                     , TemplateHaskell
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeInType
                     , TypeOperators
                     , TypeSynonymInstances
                     , UnicodeSyntax
  build-depends:       base >= 4.14 && < 5
                     , bytestring
                     , conduit
                     , conduit-combinators
                     , containers
                     , deepseq
                     , data-default
                     , inline-c
                     , lens
                     , mediabus ^>= 2
                     , monad-logger
                     , mtl
                     , random
                     , resourcet
                     , spool
                     , tagged
                     , text
                     , time
                     , transformers
                     , unliftio
                     , vector <13
  -- c-sources:         src/Data/MediaBus/FdkAac/EncoderFdkWrapper.c
  -- These flags will be passed to the C compiler
  cc-options:          -std=c99 -Wall -O2
  -- Libraries to link the code with.
  -- extra-libraries:     m
  PkgConfig-Depends:   fdk-aac >= 0.1.4

benchmark encoder-benchmark
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  main-is:          Main.hs
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                     , ConstraintKinds
                     , CPP
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DuplicateRecordFields
                     , FlexibleInstances
                     , FlexibleContexts
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , KindSignatures
                     , MultiParamTypeClasses
                     , NamedFieldPuns
                     , OverloadedStrings
                     , QuasiQuotes
                     , RecordWildCards
                     , RankNTypes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , StrictData
                     , TemplateHaskell
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeInType
                     , TypeOperators
                     , TypeSynonymInstances
                     , UnicodeSyntax
  build-depends:      base >= 4.14 && < 5
                    , deepseq
                    , ghc-prim
                    , lens
                    , monad-logger
                    , time
                    , criterion
                    , mediabus
                    , mediabus-fdk-aac
                    , conduit
                    , vector <13
  ghc-options:      -threaded -Wall -funbox-strict-fields -fno-warn-unused-do-bind -fno-full-laziness

executable mediabus-fdk-aac-example
  hs-source-dirs:      examples
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                     , ConstraintKinds
                     , CPP
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DuplicateRecordFields
                     , FlexibleInstances
                     , FlexibleContexts
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , KindSignatures
                     , LambdaCase
                     , MultiParamTypeClasses
                     , NamedFieldPuns
                     , OverloadedStrings
                     , QuasiQuotes
                     , RecordWildCards
                     , RankNTypes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , StrictData
                     , TemplateHaskell
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeInType
                     , TypeOperators
                     , TypeSynonymInstances
                     , UnicodeSyntax
  build-depends:      base >= 4.14 && < 5
                    , deepseq
                    , ghc-prim
                    , lens
                    , monad-logger
                    , time
                    , mediabus
                    , mediabus-fdk-aac
                    , resourcet
                    , monad-logger
                    , conduit
                    , vector <13
                    , unliftio
  ghc-options:      -threaded -Wall -funbox-strict-fields -fno-warn-unused-do-bind -rtsopts -O1  -fno-full-laziness

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Spec.hs
  other-modules:       Data.MediaBus.FdkAac.Conduit.EncoderSpec
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                     , ConstraintKinds
                     , CPP
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DuplicateRecordFields
                     , FlexibleInstances
                     , FlexibleContexts
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , KindSignatures
                     , LambdaCase
                     , MultiParamTypeClasses
                     , NamedFieldPuns
                     , OverloadedStrings
                     , QuasiQuotes
                     , RecordWildCards
                     , RankNTypes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , StrictData
                     , TemplateHaskell
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeInType
                     , TypeOperators
                     , TypeSynonymInstances
                     , UnicodeSyntax
  -- HACK make cabal test work in nix-shell
  -- https://github.com/obsidiansystems/cardano-node/commit/1d500566fe628f9e603244b55c2c524965bd66ff
  -- build-tool-depends:  hspec-discover:hspec-discover
  -- END OF HACK
  build-depends:      base >= 4.14 && < 5
                    , deepseq
                    , ghc-prim
                    , hspec
                    , lens
                    , monad-logger
                    , time
                    , random
                    , QuickCheck
                    , mediabus
                    , mediabus-fdk-aac
                    , mtl
                    , conduit
                    , vector <13
                    , unliftio

  ghc-options:      -threaded -Wall -funbox-strict-fields -fno-warn-unused-do-bind -rtsopts -O1  -fno-full-laziness
